[BUG] Fix scripts compatible with jdk8 & jdk11