@@ -56,6 +56,7 @@ echo "class path is $CLASSPATH"
 JVM_ARGS=" -server \
           -Xmx${XMX_SIZE:-8g} \
           -Xms${XMX_SIZE:-8g} \
+          -XX:+IgnoreUnrecognizedVMOptions \
           -XX:+UseG1GC \
           -XX:MaxGCPauseMillis=200 \
           -XX:ParallelGCThreads=20 \
@@ -66,6 +67,7 @@ JVM_ARGS=" -server \
           -XX:+PrintGCDateStamps \
           -XX:+PrintGCTimeStamps \
           -XX:+PrintGCDetails \
+          -Xlog:gc:tags,time,uptime,level \
           -Xloggc:${RSS_LOG_DIR}/gc-%t.log"
 
 ARGS=""
